# micro_feeder

./: .dokku-monorepo  .gitignore  .tool-versions  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  e2e-ci.yml  frontend-ci.yml  production-deploy.yml  sandbox-deploy.yml
backend/: .env.example.prod  CHECKS  Dockerfile  Dockerfile.dev  Makefile  Procfile  README.md  app.json  entrypoint.sh  mypy.ini  pyproject.toml
backend/migrations/: env.py  helper.py
backend/migrations/sql/up/: U_581fb18ec960_add_feed_last_etag_to_subscription.sql  U_5a6b4b830fac_create_user_table.sql  U_cd278dcdbb2c_initial_migration.sql  U_e7b3a877b1db_create_subscription_table.sql
backend/migrations/versions/: 0c9bb5aa4e4f_add_feed_last_fetched_at.py  581fb18ec960_add_feed_last_etag_to_subscription.py  5a6b4b830fac_create_user_table.py  cd278dcdbb2c_initial_migration.py  d517c4fcd82b_add_feed_last_modified_to_subscription.py  e7b3a877b1db_create_subscription_table.py
backend/src/backend/: auth.py  config.py  main.py
backend/src/backend/celery/: main.py  tasks.py
backend/src/backend/config/: __init__.py
backend/src/backend/core/: models.py  serializers.py  services.py  unit_of_work.py  utils.py
backend/src/backend/endpoints/: healtcheck.py  testing.py
backend/src/backend/endpoints/web/: auth.py  subscription.py  users.py
backend/tests/: conftest.py  db_helper.py  helper.py  test_celery_tasks.py  test_endpoint_auth.py  test_endpoint_subscription.py
backend/tests/data/: abcnews_usheadlines.xml  abcnews_usheadlines_new_items.xml
frontend/: .env.example.prod  CHECKS  Dockerfile.dev  README.md  app.json  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: create-subscription.spec.ts  delete-subscriptions.spec.ts  list-subscriptions.spec.ts  login.spec.ts  logout.spec.ts  util.ts
frontend/e2e/pages-objects/: create-subscription-page.ts  list-subscriptions-page.ts
frontend/public/: index.html
frontend/src/: App.css  App.tsx  api.ts  env.ts  index.css  index.tsx  models.ts
frontend/src/pages/AuthRoot/: index.tsx  style.css
frontend/src/pages/CreateSubscription/: index.tsx  style.css
frontend/src/pages/Documentation/: index.tsx  style.css
frontend/src/pages/Landing/: index.tsx  style.css
frontend/src/pages/ListSubscriptions/: index.tsx
