[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["wolfgang000 <wolfgangsalazarmora@gmail.com>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
psycopg = {extras = ["binary", "pool"], version = "^3.1.14"}
result = "^0.15.0"
httpx = "^0.25.2"
alembic = "^1.13.0"
celery = "^5.3.6"
redis = "^5.0.1"
feedparser = "^6.0.11"
aiofiles = "^23.2.1"
oauthlib = "^3.2.2"
itsdangerous = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
mypy = "^1.7.0"
anyio = {extras = ["trio"], version = "^3.7.1"}
types-aiofiles = "^23.2.0.0"
pytest-mock = "^3.12.0"
types-oauthlib = "^3.2.0.10"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
