[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["wolfgang000 <wolfgangsalazarmora@gmail.com>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
result = "^0.16.0"
httpx = "^0.26.0"
alembic = "^1.13.1"
celery = "^5.3.6"
redis = "^5.0.1"
feedparser = "^6.0.11"
aiofiles = "^23.2.1"
oauthlib = "^3.2.2"
itsdangerous = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
mypy = "^1.8.0"
anyio = {extras = ["trio"], version = "^4.2.0"}
types-aiofiles = "^23.2.0.20240106"
pytest-mock = "^3.12.0"
types-oauthlib = "^3.2.0.20240124"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
