[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["wolfgang000 <wolfgangsalazarmora@gmail.com>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
result = "^0.17.0"
httpx = "^0.27.0"
alembic = "^1.13.1"
celery = "^5.3.6"
redis = "^5.0.6"
feedparser = "^6.0.11"
aiofiles = "^24.1.0"
oauthlib = "^3.2.2"
itsdangerous = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
mypy = "^1.10.1"
anyio = {extras = ["trio"], version = "^4.3.0"}
types-aiofiles = "^23.2.0.20240106"
pytest-mock = "^3.14.0"
types-oauthlib = "^3.2.0.20240217"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
